possible PDO fix for windows & color picker visibility

--- a/public/quiz-create/css/sass/_quiz-preview.scss
+++ b/public/quiz-create/css/sass/_quiz-preview.scss
@@ -147,7 +147,7 @@
         @include breakpoint(large) {
             position: absolute;
             top: -4px;
-            left: 104%;
+            left: 36%;
         }
 
         &:last-of-type {
